--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,27 +8,35 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.learn.heddy.awesomemovies.DetailActivity$DetailFragment">
+    <LinearLayout
+        android:id="@+id/topLinear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="5dp"
+        android:paddingBottom="30dp">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:adjustViewBounds="true"
         android:id="@+id/posterImage"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:paddingTop="5dp"
-        android:paddingBottom="50dp"
+        android:layout_marginRight="20dp"
         />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:id="@+id/titleText"
-        android:layout_below="@id/posterImage"
-        android:layout_centerHorizontal="true"
-        android:paddingBottom="18dp"
-        android:text="Movie Title"
+        android:text="@string/movie_title"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:paddingTop="50dp"
         />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -36,7 +44,7 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:layout_gravity="center"
-        android:layout_below="@id/titleText"
+        android:layout_below="@id/topLinear"
         >
         <TextView
             android:layout_width="match_parent"
@@ -47,7 +55,7 @@
             android:layout_weight="2"
             android:paddingBottom="24dp"
             android:layout_centerHorizontal="true"
-            android:text="Plot goes here ... this could be a longer text area with 3-4 lines...."
+            android:text="@string/description_text"
             />
 
         <LinearLayout
@@ -57,29 +65,30 @@
             android:layout_weight="1">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/ratingText"
-                android:layout_gravity="left|bottom"
+                android:layout_gravity="bottom"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Medium Text"
-                />
+                android:text="@string/ratingText"
+                android:layout_weight="1"
+                android:gravity="left" />
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/releaseDateText"
                 android:layout_alignTop="@+id/ratingText"
                 android:layout_alignRight="@+id/linearLayout"
                 android:layout_alignEnd="@+id/linearLayout"
-                android:layout_gravity="bottom"
-                android:layout_marginLeft="128dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Release date"
-                />
+                android:text="@string/releaseDateText"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:gravity="right" />
         </LinearLayout>
     </LinearLayout>
 
