Change movie api endpoint to the new requirement /movie/popular and movie/top_rated

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="sortkeys">
-        <item>popularity.desc</item>
-        <item>vote_average.desc</item>
+        <item>popular</item>
+        <item>top_rated</item>
     </string-array>
     <string-array name="sortvalues">
         <item>By Popularity</item>
