--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,95 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context="com.learn.heddy.awesomemovies.DetailActivity$DetailFragment">
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.learn.heddy.awesomemovies.DetailActivity$DetailFragment">
-    <LinearLayout
-        android:id="@+id/topLinear"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="5dp"
-        android:paddingBottom="30dp">
-
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:adjustViewBounds="true"
-        android:id="@+id/posterImage"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginRight="20dp"
-        />
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:id="@+id/titleText"
-        android:text="@string/movie_title"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:paddingTop="50dp"
-        />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:orientation="vertical"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:layout_gravity="center"
-        android:layout_below="@id/topLinear"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/synopsisPlotText"
-            android:singleLine="false"
-            android:editable="false"
-            android:layout_weight="2"
-            android:paddingBottom="24dp"
-            android:layout_centerHorizontal="true"
-            android:text="@string/description_text"
-            />
-
+    android:forceHasOverlappingRendering="false">
         <LinearLayout
+            android:id="@+id/topLinear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_weight="1">
+            android:paddingTop="5dp"
+            android:paddingBottom="30dp">
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:adjustViewBounds="true"
+                    android:id="@+id/posterImage"
+                    android:layout_marginRight="20dp"
+                    />
 
-            <TextView
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/ratingText"
-                android:layout_gravity="bottom"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/ratingText"
                 android:layout_weight="1"
-                android:gravity="left" />
+                android:orientation="vertical"
+                android:layout_gravity="center">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/releaseDateText"
-                android:layout_alignTop="@+id/ratingText"
-                android:layout_alignRight="@+id/linearLayout"
-                android:layout_alignEnd="@+id/linearLayout"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/releaseDateText"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:gravity="right" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/titleText"
+                    android:text="@string/movie_title"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:paddingTop="50dp"
+                    android:gravity="center_horizontal"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ratingText"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/ratingText"
+                    android:paddingTop="12dp"
+                    android:gravity="center_horizontal"
+                     />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/releaseDateText"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/releaseDateText"
+                    android:paddingTop="12dp"
+                    android:gravity="center_horizontal"
+                     />
+
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
-</RelativeLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/synopsisPlotText"
+                android:singleLine="false"
+                android:paddingBottom="24dp"
+                android:text="@string/description_text"
+                />
+        </ScrollView>
+
+
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                android:baselineAligned="true">
+
+             </LinearLayout>
+        </LinearLayout>
+
+
+</ScrollView>
