Save Initial Trailers UI and Fetch extras methods Also tried out Butterknife.  .idea/misc.xml has lanuageLevel from JDK_1_7 to 8... I did not manually changed.

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -71,7 +71,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="120dp"
             >
             <TextView
                 android:layout_width="match_parent"
@@ -87,12 +87,25 @@
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_weight="1"
-                android:baselineAligned="true">
+                android:layout_height="300dp"
+                android:orientation="vertical">
 
-             </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/trailer_title"
+                    android:text="@string/trailers"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_margin="@dimen/activity_horizontal_margin" />
+                <ListView
+                    android:id = "@+id/listview_trailer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:contentDescription="Trailer List"
+                    android:divider="@color/material_grey_300" />
+
+            </LinearLayout>
         </LinearLayout>
 
 
