--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.learn.heddy.awesomemovies.DetailActivity$DetailFragment">
+    tools:context="com.learn.heddy.awesomemovies.DetailFragment">
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -42,7 +42,7 @@
                     android:id="@+id/titleText"
                     android:text="@string/movie_title"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:paddingTop="50dp"
+                    android:paddingTop="20dp"
                     android:gravity="center_horizontal"
                     />
 
@@ -63,10 +63,30 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="@string/releaseDateText"
                     android:paddingTop="12dp"
+                    android:paddingBottom="12dp"
                     android:gravity="center_horizontal"
                      />
 
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Favorite"
+                    android:id="@+id/mark_favorite"
+                    android:layout_gravity="center_horizontal"
+                    />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/readReviewsLink"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Read Reviews"
+                    android:layout_gravity="center_horizontal"
+                    android:clickable="true" />
+
             </LinearLayout>
+
         </LinearLayout>
 
         <ScrollView
@@ -83,29 +103,41 @@
                 />
         </ScrollView>
 
-
-            <LinearLayout
+        <!--<ScrollView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--&gt;-->
+        <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:scrollIndicators="right">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/trailer_title"
                     android:text="@string/trailers"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:layout_margin="@dimen/activity_horizontal_margin" />
+                    android:textAppearance="?android:attr/textAppearanceMediumInverse"
+                    android:layout_margin="2dp"
+                    android:background="@color/movieLightImages"
+                    android:paddingBottom="2dp"
+                    android:paddingTop="2dp"
+                    android:paddingStart="10dp" />
                 <ListView
                     android:id = "@+id/listview_trailer"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
 
                     android:contentDescription="Trailer List"
-                    android:divider="@color/material_grey_300" />
+                    android:divider="@color/movieLightImages"
+                    android:dividerHeight="1dp" />
 
             </LinearLayout>
+            <!--</ScrollView>-->
+
+
         </LinearLayout>
 
 
