--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -41,20 +41,11 @@
                     android:layout_height="match_parent"
                     android:id="@+id/titleText"
                     android:text="@string/movie_title"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textSize="32dp"
                     android:paddingTop="20dp"
                     android:gravity="center_horizontal"
-                    />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/ratingText"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="@string/ratingText"
-                    android:paddingTop="12dp"
-                    android:gravity="center_horizontal"
-                     />
+                    android:textColor="@color/movieFancyBlack"
+                    android:fontFamily="sans-serif-condensed" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -74,16 +65,29 @@
                     android:text="Favorite"
                     android:id="@+id/mark_favorite"
                     android:layout_gravity="center_horizontal"
+                    android:background="@color/movieLightImages"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ratingText"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/ratingText"
+                    android:paddingTop="12dp"
+                    android:gravity="center_horizontal"
                     />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/readReviewsLink"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Read Reviews"
+                    android:textAppearance="@android:style/TextAppearance.SuggestionHighlight"
+                    android:text="@string/title_activity_reviews"
                     android:layout_gravity="center_horizontal"
-                    android:clickable="true" />
+                    android:clickable="true"
+                    android:paddingTop="2dp" />
 
             </LinearLayout>
 
@@ -91,7 +95,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="wrap_content"
             >
             <TextView
                 android:layout_width="match_parent"
@@ -99,14 +103,9 @@
                 android:id="@+id/synopsisPlotText"
                 android:singleLine="false"
                 android:paddingBottom="24dp"
-                android:text="@string/description_text"
-                />
+                android:text="@string/description_text" />
         </ScrollView>
 
-        <!--<ScrollView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--&gt;-->
         <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
