--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -62,12 +62,12 @@
                     style="?android:attr/buttonStyleSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Favorite"
+                    android:maxWidth="80dp"
+                    android:text="@string/markFavorite"
                     android:id="@+id/mark_favorite"
                     android:layout_gravity="center_horizontal"
                     android:background="@color/movieLightImages"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp" />
+                    android:padding="6dp" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -121,7 +121,7 @@
                     android:textAppearance="?android:attr/textAppearanceMediumInverse"
                     android:layout_margin="2dp"
                     android:background="@color/movieLightImages"
-                    android:paddingBottom="2dp"
+                    android:paddingBottom="4dp"
                     android:paddingTop="2dp"
                     android:paddingStart="10dp" />
                 <ListView
